[package]
name = "chip8-interpreter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Window", "Document", "EventTarget", "KeyboardEvent"] }
